# coframe-spike

./: .gitignore  CLAUDE.md  Makefile  OBJECTIVE.md  README.md
.claude/: settings.json
.claude/commands/: spec-review.md
.githooks/: pre-commit
checks/: claude-hook.sh  gate.sh
docs/: CLEAN-CODE.md  DATA-INTENSIVE.md  SOFTWARE-DESIGN.md  SPEC-REVIEW.md  adding-a-service.md  demo.md  design.md  hours.md  runbook.md  user-guide.md
docs/reports/: 2026-07-18-sqlite-wal-throughput.md  README.md  TEMPLATE.md
docs/reports/assets/: sqlite_bench.py
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-07-18-make-new-scaffold.md  2026-07-18-monorepo-layout.md  2026-07-18-worker.md
docs/superpowers/specs/: 2026-07-18-api-dashboard-read-design.md  (+7 more)
platform/: compose.base.yaml
services/_template/: Dockerfile  README.md  compose.yaml
services/api/: .dockerignore  CLAUDE.md  Dockerfile  README.md  app.py  compose.yaml  config.seed.json  pyproject.toml
services/api/api/: app.py  cfg.py  clock.py  ctx.py  db.py  env.py  hist.py  logger.py  secrets.py
services/api/api/commands/: check_health.py  get_site_config.py  get_site_pages.py  get_site_trend.py  get_sites.py  get_stats.py  get_top_pages.py  get_trend.py  list_sites.py  record_event.py
services/api/api/endpoints/: config.py  events.py  healthz.py  sites.py  stats.py
services/api/docs/: architecture.md
services/api/tests/: conftest.py  test_config.py  test_dashboard_read.py  test_db.py  test_events.py  test_healthz.py  test_hist.py  test_read_surface.py  test_stats.py
services/dashboard/: Dockerfile  README.md  app.js  compose.yaml  fixture.json  index.html  nginx.conf
services/worker/: CLAUDE.md  Dockerfile  README.md  compose.yaml  go.mod
tools/: loadgen.py
(+14 files in other folders)
